2015-02-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Fix bug in stm8 comparison code generation.

2015-02-23 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/bug-2357.c:
	  Improve this test case.

2015-02-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/z80/main.c:
	  Improve z88dk compability (patch provided by z88dk).

2015-02-20 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/bug-2357.c:
	  A new test case.
	* support/regression/tests/gcc-torture-execute-20000412-1.c:
	  Enabled.
	* src/SDCCerr.c:
	  Change E_CODE_NO_INIT from an error to a warning.
	* src/SDCCast.c:
	  Fix a bug in selecting type of an array index.

2015-02-17 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/bug-1953.c:
	  Disable failed tests.

2015-02-16 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCast.c:
	  Fix a bug in char array initialization with string.
	* support/regression/tests/bug-1953.c:
	  Add a new test case.
	* support/regression/tests/gcc-torture-execute-20000801-4.c:
	  Enabled.

2015-02-13 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCglue.c:
	  Make pointers (of a struct) initialization more generaic.
	* support/regression/tests/bug-2123.c:
	  Add more tests.

2015-02-11 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCglue.c:
	  Improve pointer initialization.
	* support/regression/tests/bug-2123.c:
	  Add a new test case for bug #2123.

2015-02-08 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCCval.c:
	  Allow type cast in function pointer initialization.
	* support/regression/tests/bug-2124.c:
	  Add a new test case for bug #2124.

2015-02-06 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp:
	  Fix bug in weight calculation that affected tree-decompositions with imbalanced nested branches.
	* src/z80/peeph-gbz80.def:
	  Fix handling of (hl-), (hl+) in peepholes.
