@@ -1,3 +1,12 @@
+2015-02-25 Ben Shi <powerstudio1st AT 163 DOT com>
+        * support/regression/tests/bug-2031.c:
+          Add a new test case.
+        * src/SDCCglue.c:
+        * src/SDCCval.c:
+        * src/SDCCval.h:
+        * pic16/glue.c:
+          Enable a global char/int/long variable initialized by an address (const pointer).`
+
 2015-02-24 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c:
